# radiators

./: .gitignore  .pylintrc  README.md  devices.json  pyproject.toml  run_monitor.sh  run_server.sh  temperatures.csv
.github/workflows/: pylint.yml
radiators/: app.py  display_data.py  monitor.py
