[tool.poetry]
name = "radiators"
version = "0.1.0"
description = ""
authors = ["jsbrittain <98161205+jsbrittain@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.3"
tinytuya = "^1.10.1"
flask = "^2.2.2"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
